--- a/Affichage.html
+++ b/Affichage.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Grist Two-Step Selection with Table</title>
+    <title>Grist Two-Step Selection with Editable Table</title>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
     <style>
       /* Style to keep the selection container fixed at the top */
@@ -26,7 +26,6 @@
         box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
       }
 
-      /* General styles for the dropdowns */
       label {
         font-weight: bold;
         margin-bottom: 10px;
@@ -38,7 +37,6 @@
         margin-bottom: 20px;
       }
 
-      /* Style for the table */
       table {
         width: 100%;
         max-width: 800px;
@@ -62,12 +60,32 @@
         color: black;
       }
 
-      /* Table container to allow scrolling */
       .table-container {
         margin-top: 20px;
         padding: 20px;
       }
 
+      .edit-button, .delete-button {
+        margin-left: 10px;
+        cursor: pointer;
+      }
+
+      .add-form {
+        margin-top: 20px;
+        padding: 10px;
+        background-color: #f4f4f4;
+        color: black;
+      }
+
+      .add-form input {
+        margin-right: 10px;
+        padding: 5px;
+      }
+
+      .add-form button {
+        padding: 5px 10px;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
@@ -84,7 +102,7 @@
       <select id="secondColumnListbox" multiple size="10"></select>
     </div>
 
-    <!-- Table to display the remaining data -->
+    <!-- Table to display and edit the data -->
     <div class="table-container">
       <table id="dataTable">
         <thead>
@@ -94,8 +112,21 @@
       </table>
     </div>
 
+    <!-- Form to add new rows -->
+    <div class="add-form">
+      <h3>Ajouter une nouvelle ligne :</h3>
+      <input type="text" id="emetteurInput" placeholder="Emetteur">
+      <input type="text" id="referenceInput" placeholder="Référence">
+      <input type="text" id="indiceInput" placeholder="Indice">
+      <input type="text" id="recuInput" placeholder="Reçu">
+      <input type="text" id="descriptionInput" placeholder="Description/Observations">
+      <button id="addRowButton">Ajouter</button>
+    </div>
+
     <script>
       let records = [];
+      let selectedFirstValue = '';
+      let selectedSecondValue = '';
 
       // Function to populate the first dropdown with unique values from the first column
       function populateFirstColumnDropdown(values) {
@@ -135,7 +166,7 @@
       }
 
       // Function to populate the table based on the selected first and second column values
-      function populateTable(selectedFirstValue, selectedSecondValue) {
+      function populateTable() {
         const tableHeader = document.getElementById('tableHeader');
         const tableBody = document.getElementById('tableBody');
 
@@ -158,14 +189,38 @@
           tableHeader.appendChild(th);
         });
 
+        // Add action column for editing and deleting
+        const actionTh = document.createElement('th');
+        actionTh.textContent = 'Actions';
+        tableHeader.appendChild(actionTh);
+
         // Populate the table body with filtered records
-        filteredRecords.forEach(record => {
+        filteredRecords.forEach((record, rowIndex) => {
           const tr = document.createElement('tr');
           headers.forEach(header => {
             const td = document.createElement('td');
+            td.contentEditable = "true";  // Make cells editable
             td.textContent = record[header] || '';  // Use empty string for null/undefined values
+            td.addEventListener('blur', function() {
+              record[header] = td.textContent; // Update record with edited value
+              console.log('Updated record:', record);
+            });
             tr.appendChild(td);
           });
+
+          // Add buttons for editing and deleting
+          const actionTd = document.createElement('td');
+          const deleteButton = document.createElement('button');
+          deleteButton.textContent = 'Supprimer';
+          deleteButton.className = 'delete-button';
+          deleteButton.addEventListener('click', function() {
+            // Remove the record and refresh the table
+            records.splice(records.indexOf(record), 1);
+            populateTable();
+          });
+          actionTd.appendChild(deleteButton);
+          tr.appendChild(actionTd);
+
           tableBody.appendChild(tr);
         });
 
@@ -203,9 +258,9 @@
 
       // Listen to changes in the first dropdown and update the second listbox accordingly
       document.getElementById('firstColumnDropdown').addEventListener('change', function() {
-        const selectedValue = this.value;
-        if (selectedValue) {
-          populateSecondColumnListbox(selectedValue);
+        selectedFirstValue = this.value;
+        if (selectedFirstValue) {
+          populateSecondColumnListbox(selectedFirstValue);
         } else {
           document.getElementById('secondColumnListbox').innerHTML = '';  // Clear second listbox if no selection
         }
@@ -213,11 +268,35 @@
 
       // Listen to changes in the second listbox and update the table accordingly
       document.getElementById('secondColumnListbox').addEventListener('change', function() {
-        const selectedFirstValue = document.getElementById('firstColumnDropdown').value;
-        const selectedSecondValue = this.value;
+        selectedSecondValue = this.value;
         if (selectedFirstValue && selectedSecondValue) {
-          populateTable(selectedFirstValue, selectedSecondValue);
+          populateTable();
         }
+      });
+
+      // Add new row to the table
+      document.getElementById('addRowButton').addEventListener('click', function() {
+        const newRecord = {
+          NomProjet: selectedFirstValue,
+          NomEtage: selectedSecondValue,
+          Emetteur: document.getElementById('emetteurInput').value,
+          Reference: document.getElementById('referenceInput').value,
+          Indice: document.getElementById('indiceInput').value,
+          Recu: document.getElementById('recuInput').value,
+          DescriptionObservations: document.getElementById('descriptionInput').value,
+          ID_Ligne: records.length + 1 // Assign a new ID_Ligne
+        };
+
+        // Add new record to the list and refresh the table
+        records.push(newRecord);
+        populateTable();
+
+        // Clear input fields
+        document.getElementById('emetteurInput').value = '';
+        document.getElementById('referenceInput').value = '';
+        document.getElementById('indiceInput').value = '';
+        document.getElementById('recuInput').value = '';
+        document.getElementById('descriptionInput').value = '';
       });
     </script>
   </body>
