--- a/Affichage.html
+++ b/Affichage.html
@@ -5,7 +5,6 @@
     <title>Grist Two-Step Selection with Editable Table</title>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
     <style>
-      /* Style to keep the selection container fixed at the top */
       body {
         margin: 0;
         padding: 0;
@@ -203,7 +202,7 @@
             td.textContent = record[header] || '';  // Use empty string for null/undefined values
             td.addEventListener('blur', function() {
               record[header] = td.textContent; // Update record with edited value
-              console.log('Updated record:', record);
+              updateRecordInGrist(record); // Save changes to Grist
             });
             tr.appendChild(td);
           });
@@ -215,6 +214,7 @@
           deleteButton.className = 'delete-button';
           deleteButton.addEventListener('click', function() {
             // Remove the record and refresh the table
+            deleteRecordFromGrist(record.ID_Ligne); // Remove from Grist
             records.splice(records.indexOf(record), 1);
             populateTable();
           });
@@ -252,7 +252,7 @@
         });
 
         // Populate the first dropdown with unique values from 'NomProjet'
-        const uniqueFirstColumnValues = [...new Set(records.map(record => record.NomProjet).filter(value => value))];  // Filter out null/empty values
+        const uniqueFirstColumnValues = [...new Set(records.map(record => record.NomProjet))];
         populateFirstColumnDropdown(uniqueFirstColumnValues);
       });
 
@@ -274,7 +274,7 @@
         }
       });
 
-      // Add new row to the table
+      // Add new row to the table and save to Grist
       document.getElementById('addRowButton').addEventListener('click', function() {
         const newRecord = {
           NomProjet: selectedFirstValue,
@@ -284,12 +284,15 @@
           Indice: document.getElementById('indiceInput').value,
           Recu: document.getElementById('recuInput').value,
           DescriptionObservations: document.getElementById('descriptionInput').value,
-          ID_Ligne: records.length + 1 // Assign a new ID_Ligne
+          ID_Ligne: records.length + 1 // Assign a new ID_Ligne (You can improve this with a better ID management)
         };
 
         // Add new record to the list and refresh the table
         records.push(newRecord);
         populateTable();
+
+        // Save the new record to Grist
+        addRecordToGrist(newRecord);
 
         // Clear input fields
         document.getElementById('emetteurInput').value = '';
@@ -298,6 +301,39 @@
         document.getElementById('recuInput').value = '';
         document.getElementById('descriptionInput').value = '';
       });
+
+      // Function to add a record to Grist via the API
+      function addRecordToGrist(record) {
+        grist.docApi.applyUserActions([
+          ['AddRecord', 'Fusion', record] // Replace 'Fusion' with your table ID if necessary
+        ]).then(() => {
+          console.log("Record added to Grist:", record);
+        }).catch(error => {
+          console.error("Failed to add record to Grist:", error);
+        });
+      }
+
+      // Function to update a record in Grist
+      function updateRecordInGrist(record) {
+        grist.docApi.applyUserActions([
+          ['UpdateRecord', 'Fusion', record.ID_Ligne, record] // Replace 'Fusion' with your table ID if necessary
+        ]).then(() => {
+          console.log("Record updated in Grist:", record);
+        }).catch(error => {
+          console.error("Failed to update record in Grist:", error);
+        });
+      }
+
+      // Function to delete a record from Grist
+      function deleteRecordFromGrist(idLigne) {
+        grist.docApi.applyUserActions([
+          ['RemoveRecord', 'Fusion', idLigne] // Replace 'Fusion' with your table ID if necessary
+        ]).then(() => {
+          console.log("Record deleted from Grist:", idLigne);
+        }).catch(error => {
+          console.error("Failed to delete record from Grist:", error);
+        });
+      }
     </script>
   </body>
 </html>
