--- a/Affichage.html
+++ b/Affichage.html
@@ -2,296 +2,176 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Grist Two-Step Selection with Editable Table</title>
+    <title>Grist Widget Linked to Table</title>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
     <style>
+      /* Style as needed */
       body {
         margin: 0;
-        padding: 0;
-        font-family: Arial, sans-serif;
-        background-color: #2c2c2c;
-        color: white;
-      }
-
-      .sticky-container {
-        position: sticky;
-        top: 0;
-        background-color: #2c2c2c;
         padding: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        z-index: 1000;
-        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+        font-family: Arial, sans-serif;
       }
-
-      label {
-        font-weight: bold;
-        margin-bottom: 10px;
+      .container {
+        width: 100%;
+        max-width: 1200px;
+        margin: 0 auto;
       }
-
-      select {
-        width: 200px;
-        padding: 8px;
-        margin-bottom: 20px;
-      }
-
       table {
         width: 100%;
-        max-width: 800px;
         border-collapse: collapse;
-        margin-top: 100px;
-        background-color: #fff;
+        margin-top: 20px;
       }
-
+      table, th, td {
+        border: 1px solid #ccc;
+      }
       th, td {
         padding: 10px;
-        border: 1px solid #ddd;
         text-align: left;
       }
-
       th {
-        background-color: #333;
-        color: white;
+        background-color: #f4f4f4;
       }
-
-      td {
-        color: black;
-      }
-
-      .table-container {
-        margin-top: 20px;
-        padding: 20px;
-      }
-
-      .edit-button, .delete-button {
-        margin-left: 10px;
-        cursor: pointer;
-      }
-
       .add-form {
         margin-top: 20px;
-        padding: 10px;
-        background-color: #f4f4f4;
-        color: black;
-      }
-
-      .add-form input {
-        margin-right: 10px;
-        padding: 5px;
-      }
-
-      .add-form button {
-        padding: 5px 10px;
-        cursor: pointer;
       }
     </style>
   </head>
   <body>
-    <!-- Container for the sticky selection lists -->
-    <div class="sticky-container">
-      <!-- First dropdown for selecting a project -->
+    <div class="container">
+      <!-- Selection List for First and Second Column -->
       <label for="firstColumnDropdown">Projet :</label>
       <select id="firstColumnDropdown">
         <option value="">Select an option</option>
       </select>
 
-      <!-- Second listbox for selecting the tableau -->
-      <label for="secondColumnListbox">Tableau :</label>
-      <select id="secondColumnListbox" multiple size="10"></select>
-    </div>
+      <br><br>
 
-    <!-- Table to display and edit the data -->
-    <div class="table-container">
+      <label for="secondColumnListbox">Tableau :</label>
+      <select id="secondColumnListbox" multiple size="5"></select>
+
+      <!-- Table Display -->
       <table id="dataTable">
-        <thead>
-          <tr id="tableHeader"></tr>
-        </thead>
+        <thead id="tableHeader"></thead>
         <tbody id="tableBody"></tbody>
       </table>
-    </div>
 
-    <!-- Form to add new rows -->
-    <div class="add-form">
-      <h3>Ajouter une nouvelle ligne :</h3>
-      <input type="text" id="emetteurInput" placeholder="Emetteur">
-      <input type="text" id="referenceInput" placeholder="Référence">
-      <input type="text" id="indiceInput" placeholder="Indice">
-      <input type="text" id="recuInput" placeholder="Reçu">
-      <input type="text" id="descriptionInput" placeholder="Description/Observations">
-      <button id="addRowButton">Ajouter</button>
+      <!-- Form for Adding New Row -->
+      <div class="add-form">
+        <h3>Ajouter une nouvelle ligne :</h3>
+        <input type="text" id="emetteurInput" placeholder="Emetteur">
+        <input type="text" id="referenceInput" placeholder="Référence">
+        <input type="text" id="indiceInput" placeholder="Indice">
+        <input type="text" id="recuInput" placeholder="Reçu">
+        <input type="text" id="descriptionInput" placeholder="Description/Observations">
+        <button id="addRowButton">Ajouter</button>
+      </div>
     </div>
 
     <script>
       let records = [];
-      let selectedFirstValue = '';
-      let selectedSecondValue = '';
+      let tableId = ''; // Dynamically capture the table ID from Grist
 
-      // Function to populate the first dropdown with unique values from the first column
+      // Grist API ready
+      grist.ready();
+
+      // Fetch the currently selected table when the widget is loaded
+      grist.onRecords((receivedRecords, tableIdReceived) => {
+        console.log("Table ID received:", tableIdReceived); // Check table ID
+        tableId = tableIdReceived; // Set the dynamic table ID
+        records = receivedRecords;
+        populateFirstColumnDropdown([...new Set(records.map(record => record.NomProjet))]);
+      });
+
+      // Populate First Column Dropdown
       function populateFirstColumnDropdown(values) {
         const dropdown = document.getElementById('firstColumnDropdown');
-        dropdown.innerHTML = '<option value="">Select an option</option>';  // Reset the dropdown
-
+        dropdown.innerHTML = '<option value="">Select an option</option>';
         values.forEach(value => {
-          if (value) {  // Skip null or empty values
+          if (value) {
             const option = document.createElement('option');
             option.value = value;
             option.text = value;
             dropdown.appendChild(option);
           }
         });
-        console.log("First column populated:", values); // Debugging output
       }
 
-      // Function to populate the second listbox based on the selected first column value
+      // Populate Second Column Listbox
       function populateSecondColumnListbox(selectedValue) {
         const listbox = document.getElementById('secondColumnListbox');
-        listbox.innerHTML = '';  // Clear current listbox
-
+        listbox.innerHTML = '';
         const secondColumnValues = records
-          .filter(record => record.NomProjet === selectedValue)  // Filter based on selected first column value
-          .map(record => record.NomEtage)  // Extract second column values
-          .filter((value, index, self) => value && self.indexOf(value) === index)  // Remove duplicates and null/empty values
+          .filter(record => record.NomProjet === selectedValue)
+          .map(record => record.NomEtage)
+          .filter((value, index, self) => value && self.indexOf(value) === index)
           .sort();
-
         secondColumnValues.forEach(value => {
           const option = document.createElement('option');
           option.value = value;
           option.text = value;
           listbox.appendChild(option);
         });
-
-        console.log("Second column values populated for", selectedValue, ":", secondColumnValues); // Debugging output
       }
 
-      // Function to populate the table based on the selected first and second column values
+      // Populate Table Based on First and Second Column Selection
       function populateTable() {
         const tableHeader = document.getElementById('tableHeader');
         const tableBody = document.getElementById('tableBody');
-
-        // Clear the table
         tableHeader.innerHTML = '';
         tableBody.innerHTML = '';
 
-        const filteredRecords = records
-          .filter(record => record.NomProjet === selectedFirstValue && record.NomEtage === selectedSecondValue);
+        const selectedFirstValue = document.getElementById('firstColumnDropdown').value;
+        const selectedSecondValue = document.getElementById('secondColumnListbox').value;
 
+        const filteredRecords = records.filter(record => record.NomProjet === selectedFirstValue && record.NomEtage === selectedSecondValue);
         if (filteredRecords.length === 0) return;
 
-        const exampleRecord = filteredRecords[0];
-        const headers = Object.keys(exampleRecord).filter(key => key !== 'NomProjet' && key !== 'NomEtage' && key !== 'ID_Ligne'); // Skip first two and last column (ID_Ligne)
-
-        // Populate the table header
+        const headers = ['Emetteur', 'Reference', 'Indice', 'Recu', 'DescriptionObservations'];
         headers.forEach(header => {
           const th = document.createElement('th');
           th.textContent = header;
           tableHeader.appendChild(th);
         });
 
-        // Add action column for editing and deleting
-        const actionTh = document.createElement('th');
-        actionTh.textContent = 'Actions';
-        tableHeader.appendChild(actionTh);
-
-        // Populate the table body with filtered records
-        filteredRecords.forEach((record, rowIndex) => {
+        filteredRecords.forEach(record => {
           const tr = document.createElement('tr');
           headers.forEach(header => {
             const td = document.createElement('td');
-            td.contentEditable = "true";  // Make cells editable
-            td.textContent = record[header] || '';  // Use empty string for null/undefined values
+            td.contentEditable = "true";
+            td.textContent = record[header] || '';
             td.addEventListener('blur', function() {
-              record[header] = td.textContent; // Update record with edited value
-              updateRecordInGrist(record); // Save changes to Grist
+              record[header] = td.textContent;
+              updateRecordInGrist(record);
             });
             tr.appendChild(td);
           });
-
-          // Add buttons for editing and deleting
-          const actionTd = document.createElement('td');
-          const deleteButton = document.createElement('button');
-          deleteButton.textContent = 'Supprimer';
-          deleteButton.className = 'delete-button';
-          deleteButton.addEventListener('click', function() {
-            // Remove the record and refresh the table
-            deleteRecordFromGrist(record.ID_Ligne); // Remove from Grist
-            records.splice(records.indexOf(record), 1);
-            populateTable();
-          });
-          actionTd.appendChild(deleteButton);
-          tr.appendChild(actionTd);
-
           tableBody.appendChild(tr);
         });
-
-        console.log("Table populated with records:", filteredRecords); // Debugging output
       }
 
-      // Ready Grist
-      grist.ready();
-
-      // Fetch records from Grist
-      grist.onRecords(function(receivedRecords) {
-        console.log("Records received from Grist:", receivedRecords); // Debugging output
-        
-        records = receivedRecords.map(record => {
-          const nomProjet = record.NomProjet || null;
-          const nomEtage = record.NomEtage || null;
-
-          // Include other columns in the record
-          return {
-            NomProjet: nomProjet,
-            NomEtage: nomEtage,
-            Emetteur: record.Emetteur || '',
-            Reference: record.Reference || '',
-            Indice: record.Indice || '',
-            Recu: record.Recu || '',
-            DescriptionObservations: record.DescriptionObservations || '',
-            ID_Ligne: record.ID_Ligne || '' // Exclude this column from the table display
-          };
-        });
-
-        // Populate the first dropdown with unique values from 'NomProjet'
-        const uniqueFirstColumnValues = [...new Set(records.map(record => record.NomProjet))];
-        populateFirstColumnDropdown(uniqueFirstColumnValues);
-      });
-
-      // Listen to changes in the first dropdown and update the second listbox accordingly
+      // Event Listeners
       document.getElementById('firstColumnDropdown').addEventListener('change', function() {
-        selectedFirstValue = this.value;
-        if (selectedFirstValue) {
-          populateSecondColumnListbox(selectedFirstValue);
-        } else {
-          document.getElementById('secondColumnListbox').innerHTML = '';  // Clear second listbox if no selection
-        }
+        const selectedFirstValue = this.value;
+        populateSecondColumnListbox(selectedFirstValue);
       });
 
-      // Listen to changes in the second listbox and update the table accordingly
       document.getElementById('secondColumnListbox').addEventListener('change', function() {
-        selectedSecondValue = this.value;
-        if (selectedFirstValue && selectedSecondValue) {
-          populateTable();
-        }
+        populateTable();
       });
 
-      // Add new row to the table and save to Grist
+      // Add New Row to Grist
       document.getElementById('addRowButton').addEventListener('click', function() {
         const newRecord = {
-          NomProjet: selectedFirstValue,
-          NomEtage: selectedSecondValue,
+          NomProjet: document.getElementById('firstColumnDropdown').value,
+          NomEtage: document.getElementById('secondColumnListbox').value,
           Emetteur: document.getElementById('emetteurInput').value,
           Reference: document.getElementById('referenceInput').value,
           Indice: document.getElementById('indiceInput').value,
           Recu: document.getElementById('recuInput').value,
           DescriptionObservations: document.getElementById('descriptionInput').value,
-          ID_Ligne: records.length + 1 // Assign a new ID_Ligne (You can improve this with a better ID management)
         };
 
-        // Add new record to the list and refresh the table
-        records.push(newRecord);
-        populateTable();
-
-        // Save the new record to Grist
+        // Save new record to Grist
         addRecordToGrist(newRecord);
 
         // Clear input fields
@@ -302,36 +182,36 @@
         document.getElementById('descriptionInput').value = '';
       });
 
-      // Function to add a record to Grist via the API
+      // Function to Add Record to Grist
       function addRecordToGrist(record) {
         grist.docApi.applyUserActions([
-          ['AddRecord', 'Fusion', record] // Replace 'Fusion' with your table ID if necessary
+          ['AddRecord', tableId, record]
         ]).then(() => {
-          console.log("Record added to Grist:", record);
+          console.log("Record added:", record);
         }).catch(error => {
-          console.error("Failed to add record to Grist:", error);
+          console.error("Failed to add record:", error);
         });
       }
 
-      // Function to update a record in Grist
+      // Function to Update Record in Grist
       function updateRecordInGrist(record) {
         grist.docApi.applyUserActions([
-          ['UpdateRecord', 'Fusion', record.ID_Ligne, record] // Replace 'Fusion' with your table ID if necessary
+          ['UpdateRecord', tableId, record.id, record]  // Record id needs to be unique ID of the row in Grist
         ]).then(() => {
-          console.log("Record updated in Grist:", record);
+          console.log("Record updated:", record);
         }).catch(error => {
-          console.error("Failed to update record in Grist:", error);
+          console.error("Failed to update record:", error);
         });
       }
 
-      // Function to delete a record from Grist
-      function deleteRecordFromGrist(idLigne) {
+      // Function to Delete Record from Grist
+      function deleteRecordFromGrist(id) {
         grist.docApi.applyUserActions([
-          ['RemoveRecord', 'Fusion', idLigne] // Replace 'Fusion' with your table ID if necessary
+          ['RemoveRecord', tableId, id]
         ]).then(() => {
-          console.log("Record deleted from Grist:", idLigne);
+          console.log("Record deleted:", id);
         }).catch(error => {
-          console.error("Failed to delete record from Grist:", error);
+          console.error("Failed to delete record:", error);
         });
       }
     </script>
