--- a/Affichage.html
+++ b/Affichage.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Grist Two-Step Selection with Editable Table and Save</title>
+    <title>Grist Two-Step Selection with Editable Table and Deletion</title>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
     <style>
       body {
@@ -62,23 +62,6 @@
       .table-container {
         margin-top: 20px;
         padding: 20px;
-      }
-
-      .add-form {
-        margin-top: 20px;
-        padding: 10px;
-        background-color: #f4f4f4;
-        color: black;
-      }
-
-      .add-form input {
-        margin-right: 10px;
-        padding: 5px;
-      }
-
-      .add-form button {
-        padding: 5px 10px;
-        cursor: pointer;
       }
 
       .save-button {
@@ -145,25 +128,10 @@
       <div id="deleteRow">Supprimer la ligne</div>
     </div>
 
-    <!-- Form to add new rows -->
-    <div class="add-form">
-      <h3>Ajouter une nouvelle ligne :</h3>
-      <input type="text" id="emetteurInput" placeholder="Emetteur">
-      <input type="text" id="referenceInput" placeholder="Référence">
-      <input type="text" id="indiceInput" placeholder="Indice">
-      <input type="text" id="recuInput" placeholder="Reçu">
-      <input type="text" id="descriptionInput" placeholder="Description/Observations">
-      <button id="addRowButton">Ajouter</button>
-    </div>
-
-    <!-- Save Button to refresh the page -->
-    <button id="saveButton" class="save-button">Sauvegarder les modifications</button>
-
     <script>
       let records = [];
       let selectedFirstValue = '';
       let selectedSecondValue = '';
-      let modifiedRecords = []; // Array to store all modified records
       let selectedRowRecord = null; // To track the selected row for deletion
 
       // Function to populate the first dropdown with unique values from the first column
@@ -236,9 +204,6 @@
             td.textContent = record[header] || '';  // Use empty string for null/undefined values
             td.addEventListener('blur', function() {
               record[header] = td.textContent; // Update record with edited value
-              if (!modifiedRecords.includes(record)) {
-                modifiedRecords.push(record); // Add record to modified records if it's not already there
-              }
             });
             tr.appendChild(td);
           });
@@ -273,7 +238,8 @@
       // Handle deleting a row from the context menu
       document.getElementById('deleteRow').addEventListener('click', function() {
         if (selectedRowRecord) {
-          deleteRecordFromGrist(selectedRowRecord.ID_Ligne); // Remove from Grist
+          // Remove the record both locally and in Grist
+          deleteRecordFromGrist(selectedRowRecord);
           records.splice(records.indexOf(selectedRowRecord), 1); // Remove from local records
           populateTable(); // Refresh the table
         }
@@ -332,71 +298,15 @@
         }
       });
 
-      // Add new row to the table and save to Grist
-      document.getElementById('addRowButton').addEventListener('click', function() {
-        const newRecord = {
-          NomProjet: selectedFirstValue,
-          NomEtage: selectedSecondValue,
-          Emetteur: document.getElementById('emetteurInput').value,
-          Reference: document.getElementById('referenceInput').value,
-          Indice: document.getElementById('indiceInput').value,
-          Recu: document.getElementById('recuInput').value,
-          DescriptionObservations: document.getElementById('descriptionInput').value,
-          ID_Ligne: records.length + 1 // Assign a new ID_Ligne (You can improve this with a better ID management)
-        };
-
-        // Add new record to the list and refresh the table
-        records.push(newRecord);
-        populateTable();
-
-        // Save the new record to Grist
-        addRecordToGrist(newRecord);
-
-        // Clear input fields
-        document.getElementById('emetteurInput').value = '';
-        document.getElementById('referenceInput').value = '';
-        document.getElementById('indiceInput').value = '';
-        document.getElementById('recuInput').value = '';
-        document.getElementById('descriptionInput').value = '';
-      });
-
-      // Save Button to update modified records in Grist
-      document.getElementById('saveButton').addEventListener('click', function() {
-        modifiedRecords.forEach(record => {
-          updateRecordInGrist(record);
-        });
-        modifiedRecords = []; // Clear the array after saving
-        alert('Modifications sauvegardées');
-      });
-
-      // Function to add a record to Grist via the API
-      function addRecordToGrist(record) {
-        grist.docApi.applyUserActions([
-          ['AddRecord', 'Fusion', record] // Replace 'Fusion' with your table ID if necessary
-        ]).then(() => {
-          console.log("Record added to Grist:", record);
-        }).catch(error => {
-          console.error("Failed to add record to Grist:", error);
-        });
-      }
-
-      // Function to update a record in Grist
-      function updateRecordInGrist(record) {
-        grist.docApi.applyUserActions([
-          ['UpdateRecord', 'Fusion', record.ID_Ligne, record] // Replace 'Fusion' with your table ID if necessary
-        ]).then(() => {
-          console.log("Record updated in Grist:", record);
-        }).catch(error => {
-          console.error("Failed to update record in Grist:", error);
-        });
-      }
-
       // Function to delete a record from Grist
-      function deleteRecordFromGrist(idLigne) {
+      function deleteRecordFromGrist(record) {
+        const { NomProjet, NomEtage, Emetteur, Reference, Indice, Recu, DescriptionObservations } = record;
+
+        // Find the corresponding row in Grist based on all the fields
         grist.docApi.applyUserActions([
-          ['RemoveRecord', 'Fusion', idLigne] // Replace 'Fusion' with your table ID if necessary
+          ['RemoveRecord', 'Fusion', record.ID_Ligne] // Use ID_Ligne to delete the correct record
         ]).then(() => {
-          console.log("Record deleted from Grist:", idLigne);
+          console.log("Record deleted from Grist:", record);
         }).catch(error => {
           console.error("Failed to delete record from Grist:", error);
         });
