--- a/Affichage.html
+++ b/Affichage.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Grist Two-Step Selection with Editable Table and Deletion</title>
+    <title>Grist Two-Step Selection with Contextual Deletion</title>
     <script src="https://docs.getgrist.com/grist-plugin-api.js"></script>
     <style>
       body {
@@ -62,19 +62,6 @@
       .table-container {
         margin-top: 20px;
         padding: 20px;
-      }
-
-      .save-button {
-        margin-top: 20px;
-        padding: 10px 20px;
-        background-color: #4CAF50;
-        color: white;
-        border: none;
-        cursor: pointer;
-      }
-
-      .save-button:hover {
-        background-color: #45a049;
       }
 
       /* Context menu styling */
